fix font size on mobile

--- a/data/site.css
+++ b/data/site.css
@@ -37,8 +37,7 @@
 
 @media (max-aspect-ratio: 3/4) {
     html {
-        /* only supported by safari and FF */
-        font-size-adjust: ex-height 1.25;
+        font-size: calc((1vh+1vw)/2)
     }
 }
 
